<resources>
    <string name="app_name">Memo</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_list">List</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>

    <string-array name="nav_activity_titles">
        <item>Inbox</item>
        <item>List</item>
        <item>Settings</item>
    </string-array>

    <string name="app_title_lowercase">memo</string>
    <string name="title_login">Login</string>
    <string name="title_email">Email</string>
    <string name="password_field">Password</string>
    <string name="need_account_title">Need an account? Sign up</string>
    <string name="btn_forgot_pass">Forgot Password</string>
    <string name="title_signup">Signup</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="todo_name">Todo Name</string>
    <string name="add_todo">Add Todo</string>
    <string name="add">Add</string>
    <string name="number_of_rows">Number of rows:</string>
    <string name="pick_date">No due date chosen</string>
    <string name="pick_time">No time chosen</string>

    <string name="key_pref_general" translatable="false">general</string>
    <string name="key_pref_categories" translatable="false">categories</string>
    <string name="key_pref_productivity" translatable="false">productivity</string>
    <string name="key_pref_notifications" translatable="false">notifications</string>
    <string name="key_pref_delete" translatable="false">delete</string>

    <string name="label_pref_general">General</string>
    <string name="label_pref_notifications">Notifications</string>
    <string name="label_pref_categories">Categories</string>
    <string name="label_pref_productivity">Productivity</string>
    <string name="label_pref_delete">Delete this Account</string>

    <!-- General  -->

    <string name="key_pref_name" translatable="false">name</string>
    <string name="key_pref_email" translatable="false">email</string>
    <string name="key_pref_password" translatable="false">password</string>
    <string name="key_pref_timezone" translatable="false">timezone</string>

    <string name="label_pref_name">Name</string>
    <string name="label_pref_email">Change your email</string>
    <string name="label_pref_password">Change your password</string>
    <string name="label_pref_timezone">Timezone</string>

    <string name="summary_pref_name">Enter your name</string>
    <string name="summary_pref_email">Change your email</string>
    <string name="summary_pref_password">Enter your email. A confirmation link will be sent to you</string>
    <string name="summary_pref_timezone">Select timezone</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="enter_email">Enter Email</string>
    <string name="preference_title">Settings</string>
    <string name="change_password_message">Enter your email and we will send an email to change your password</string>
    <string name="pref_header_categories">Categories</string>
    <string name="pref_header_productivity">Productivity</string>

    <string name="key_category_1" translatable="false">category_1</string>
    <string name="key_category_2" translatable="false">category_2</string>
    <string name="key_category_3" translatable="false">category_3</string>
    <string name="key_category_4" translatable="false">category_4</string>
    <string name="key_category_5" translatable="false">category_5</string>
    <string name="daily_tasks_dialog_title">Pick number of daily tasks</string>

    <string name="key_pref_daily_goal" translatable="false">daily_goal</string>
    <string name="daily_goal_default">5 tasks</string>
    <string name="key_pref_vacation">vacation</string>
    <string name="key_pref_vacation_mode">Vacation mode</string>
    <string name="vacation_mode_message">When you\'re on vacation mode, you\'re daily goal reminder will be switched off</string>

    <string name="key_priority_1">priority_1</string>
    <string name="key_priority_2">priority_2</string>
    <string name="key_priority_3">priority_3</string>


</resources>