<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.android.memo.preferencefragments.GeneralPreferenceFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.android.memo.preferencefragments.CategoriesPreferenceFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/pref_header_categories" />

    <header
        android:fragment="com.example.android.memo.preferencefragments.ProductivityPreferenceFragment"
        android:icon="@drawable/ic_chart"
        android:title="@string/pref_header_productivity" />

</preference-headers>
