<?xml version="1.0" encoding="utf-8"?>

<!-- Layout-Fix for the EditTextPreference Dialog -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_message"
        android:layout_above="@id/edit"
        android:textColor="#A2A2A2"/>

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_email" />

    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/edit"
        android:hint="@string/password_field"
        android:layout_marginTop="10dp"/>

</RelativeLayout>