<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.memo.fragments.LoginFragment">


        <ImageView
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/editTextEmail"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/editTextEmail"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo_white" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_title_lowercase"
            android:textColor="#ffffff"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/app_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:text="@string/title_login"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/loginTitle"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_shape"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/title_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="18sp"
            android:backgroundTint="#BFFFFFFF" tools:targetApi="lollipop"/>


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextEmail"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_shape"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="18sp"
            android:backgroundTint="#BFFFFFFF" tools:targetApi="lollipop"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/editTextPassword"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/title_login"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/edit_text_shape" tools:targetApi="lollipop"/>


        <Button
            android:id="@+id/btnGoToSignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/btnLogin"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/need_account_title"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:background="@drawable/edit_text_shape" tools:targetApi="lollipop"/>




        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/btnGoToSignUp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_forgot_pass"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:background="@drawable/edit_text_shape" tools:targetApi="lollipop"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>


</RelativeLayout>

