<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.android.memo.fragments.SignupFragment">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_title_lowercase"
            android:textColor="@color/colorPrimary"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/app_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:text="@string/title_signup"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/loginTitle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:background="@drawable/edit_text_shape"
            android:backgroundTint="#B1E0F9"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/title_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextEmail"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_shape"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/password_field"
            android:backgroundTint="#B1E0F9"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/editTextPassword"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorAccent"
            android:text="Signup"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/edit_text_shape"/>


        <Button
            android:id="@+id/btnGotoLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/btnSignup"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/already_have_account"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:background="@drawable/edit_text_shape"/>


    </RelativeLayout>

