<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.memo.Activity.AddTodoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="start"
        app:theme="@style/CustomActionBar"
        tools:targetApi="lollipop">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_todo"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tvTodoName"
        android:layout_below="@id/toolbar_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextTodoName"
        android:layout_alignLeft="@+id/editTextTodoName"
        android:layout_marginTop="24dp"
        android:text="@string/add_todo"/>

    <EditText
        android:id="@+id/editTextTodoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTodoName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/todo_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/editTextTodoName"
        android:id="@+id/linearLayout">

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        style="?android:attr/buttonBarButtonStyle"
        android:backgroundTint="#EBEBEB" tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnTimePicker"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/pick_time"
            android:backgroundTint="#EBEBEB" tools:targetApi="lollipop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/spinnerLinearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:padding="8dp">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp" />

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="175dp"
            android:layout_height="50dp" />


    </LinearLayout>


</RelativeLayout>
