<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- YOUR CUSTOM VIEWS HERE -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTodoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextTodoName"
                android:layout_alignStart="@+id/editTextTodoName"
                android:layout_marginTop="70dp"
                android:text="@string/add_todo" />

            <EditText
                android:id="@+id/editTextTodoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTodoName"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:hint="@string/todo_name" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextTodoName"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:id="@+id/btnDatePicker"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_date"
                    style="?android:attr/buttonBarButtonStyle"
                    android:backgroundTint="#EBEBEB" tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/btnTimePicker"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/pick_time"
                    android:backgroundTint="#EBEBEB" tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spinnerLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:padding="8dp">

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <Spinner
                    android:id="@+id/spinnerPriority"
                    android:layout_width="175dp"
                    android:layout_height="50dp" />


            </LinearLayout>
        </RelativeLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>